Weird alignment error fix

--- a/app/auth/components/AuthPage/styles.scss
+++ b/app/auth/components/AuthPage/styles.scss
@@ -152,6 +152,8 @@
 
   .signup-button-wrapper {
     float: left;
+    padding-right: 3em;
+    margin-bottom: 3em;
   }
 
   .signup-container {
@@ -267,7 +269,7 @@
   }
 
   .ui.form {
-    margin: 0em 2em 0em 0.64em;
+    margin: 0em 0em 0em 0em;
   }
 
   .ui.form .field {
